--- a/maze solver.vcxproj
+++ b/maze solver.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{75eec67f-f008-496c-86e2-4640451255a1}</ProjectGuid>
-    <RootNamespace>maze solve</RootNamespace>
+    <RootNamespace>maze solver</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
